Changed letterspacing in nav. Fix #40

--- a/static_files/scss/jj-sidemenu.scss
+++ b/static_files/scss/jj-sidemenu.scss
@@ -120,10 +120,11 @@
 				        }
 
 				        a {
-				            font-family : $regular;
-				            font-size   : 11px;
-				            color       : #333;
-				            font-weight : normal;
+							font-family    : $regular;
+							font-size      : 11px;
+							color          : #333;
+							font-weight    : normal;
+							letter-spacing : 1px;
 
 				            &:hover {
 				            	text-decoration: underline;
@@ -132,11 +133,12 @@
 
 				        li {
 					        a {
-								font-family : $light;
-								font-weight : normal;
-								font-size   : 11px;
-								line-height : 21px;
-								color       : #666;
+								font-family    : $light;
+								font-weight    : normal;
+								font-size      : 11px;
+								line-height    : 21px;
+								color          : #666;
+								letter-spacing : 0;
 
 								&:hover {
 									color : #000;
@@ -154,12 +156,22 @@
 						display : none;
 				    }
 
-				    &.jj-j-shop-highlights > a {
+				    &.jj-j-shop-highlights > a,
+				    &.jj-c-shop-highlights > a,
+				    &.jj-o-shop-highlights > a,
+				    &.jj-p-shop-highlights > a,
+				    &.jj-v-shop-highlights > a,
+				    &.jj-t-shop-highlights > a {
 						padding: 30px 0 14px;
 				    }
 
 
-				    &.jj-j-miscellaneous {
+				    &.jj-j-miscellaneous,
+				    &.jj-c-miscellaneous,
+				    &.jj-o-miscellaneous,
+				    &.jj-p-miscellaneous,
+				    &.jj-v-miscellaneous,
+				    &.jj-t-miscellaneous {
 						padding-top: 20px;
 				    }
 				}
